# axum-rinf-flutter-example

./: Cargo.toml  README.md
api-server/: Cargo.toml
api-server/src/: main.rs
app/: pubspec.yaml
app/lib/: main.dart
app/messages/: counter.proto
app/native/api-client/: Cargo.toml
app/native/api-client/src/: lib.rs
app/native/hub/: Cargo.toml
app/native/hub/src/: counter.rs  lib.rs
models/: Cargo.toml
models/src/: lib.rs
