[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-test = "14.8.0"
models = { version = "0.1.0", path = "../models" }
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
axum-test = "14.8.0"
